<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/black">

            <TextView
                android:id="@+id/textViewDisplayTextChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDisplayTextChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:text="@string/generate_new_password" />

            <Button
                android:id="@+id/buttonCopyToClipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_button" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/toSavedPasswords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved_passwords"
                android:textAlignment="center"
                android:layout_margin="24dp"/>
        </LinearLayout>

</RelativeLayout>